traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-api-ingress
  namespace: production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: search-api.192.168.1.100.nip.io  # Remplace avec ton IP publique ou privée
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search-api-service
            port:
              number: 5003
